@RequestScope på InntektsmeldingService.